add image and starting the main content

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
             </ul>
         </nav>
     </header>
-        
+    <section class="bg-image">    </section>
+    <!--esta SECCION SE PONDRÁ UNA IMAGEN DE FONDO -->
         <main>
-            <section id="About-Me"> About Me </section>
-            <p>nbdfbhjjhladsjascnkahcbajsdaj     </p>
+            <h2 id="about-me"> About Me </h2>
+            <p class="about-me-body">nbdfbhjjhladsjascnkahcbajsdaj </p>
             <section id="My-work">My Work</section>
             <p> asdsjcasc
             </p>
