added classes work and contact and var for titles h2

--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
         <main>
             <h2 id="about-me"> About Me </h2>
             <p class="about-me-body">nbdfbhjjhladsjascnkahcbajsdaj </p>
-            <section id="My-work">My Work</section>
-            <p> asdsjcasc
-            </p>
-            <section id="Contactme"> Contact Me</section>
+            <section class="my-work">My Work</section>
+            <p> asdsjcasc</p>
+            <section class="contact"> Contact Me</section>
         </main>
 </body>
 </html>
