starting all over again

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>My website
         <nav>
             <ul>
-                <a class="About-Me" href="#About-Me"> About Me </a>
-                <a class="My-work" href="#My-work"> My Work</a>
-                <a class="Contactme" href="#ContactMe"> Contact Me </a>
+                <a class="About-Me" href="#"> About Me </a>
+                <a class="My-work" href="#"> My Work</a>
+                <a class="Contactme" href="#"> Contact Me </a>
             </ul>
         </nav>
     </header>
@@ -28,7 +28,8 @@
         </main>
 </body>
 </html>
-<!--Esto que puse abajo es lo que usé en el mini project y lo usaré como base--> 
+<!--Esto que puse abajo es lo que usé en el mini project y lo usaré como base
+
 <main>
     <section class="row justify-center">
       <div class="card-column">
@@ -36,9 +37,9 @@
     <h2 class="card-header main-color">Flexbox Row</h2>
     <div class="card-body">
       <p class="main-color">Use these three properties to create a Flexbox rox layput.</p>
-    </div>
+    </div>-->
     <!-- with the <pre> element, it counts all spaces literally, so proper code indentation cannot be applied in this case -->
-    <pre class="code-block">
+    <!-- <pre class="code-block">
       .row {
       display:flex;
       flex-direction: row;
