--- a/index.html
+++ b/index.html
@@ -5,29 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
   <link rel="stylesheet" href="style.css"/>
-    <title>Challen 2</title>
-</head>
-<body>
-    <header>My website
+  <body>
+    <header>
         <nav>
-            <ul>
-                <a class="About-Me" href="#"> About Me </a>
-                <a class="My-work" href="#"> My Work</a>
-                <a class="Contactme" href="#"> Contact Me </a>
+            <ul class="nav-links">
+                <li><a href="#">About Me</a></li>
+                <li><a href="#">My Work</a></li>
+                <li><a href="#">Contact Me</a></li>
             </ul>
         </nav>
     </header>
-    <section class="bg-image">    </section>
-    <!--esta SECCION SE PONDRÁ UNA IMAGEN DE FONDO -->
-        <main>
-            <h2 id="about-me"> About Me </h2>
-            <p class="about-me-body">nbdfbhjjhladsjascnkahcbajsdaj </p>
-            <section class="my-work">My Work</section>
-            <p> asdsjcasc</p>
-            <section class="contact"> Contact Me</section>
-        </main>
-</body>
-</html>
+  </body> 
+
 <!--Esto que puse abajo es lo que usé en el mini project y lo usaré como base
 
 <main>
