--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     
   <link rel="stylesheet" href="style.css"/>
   <body>
+    <h2 class="title">My portafolio</h2>
     <header>
         <nav>
             <ul class="nav-links">
