variables to bgcolor

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
             </ul>
         </nav>
     </header>
+    <h3 class="subtitle" > My projects </h3>
+    <main>
+       <section class="aboutme">About me </section>
+        <p class="amcontent"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi nesciunt quidem quibusdam consequatur repellat iste officiis aperiam placeat ad voluptatem earum, eos dignissimos tempore nihil fugit voluptatibus, commodi enim. Alias?</p>
+       <section class="Mywork">My work </section>
+       <section class="Contactme">Contact Me </section>
+    </main>
+    <aside> 
+    </aside>
   </body> 
 
 <!--Esto que puse abajo es lo que usé en el mini project y lo usaré como base
