hover in content

--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
     <main>
        <section class="aboutme">About me </section>
         <p class="amcontent"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi nesciunt quidem quibusdam consequatur repellat iste officiis aperiam placeat ad voluptatem earum, eos dignissimos tempore nihil fugit voluptatibus, commodi enim. Alias?</p>
-       <section class="Mywork">My work </section>
+       <section class="mywork">My work </section>
+       <p class="mwcontent"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi nesciunt quidem quibusdam consequatur repellat iste officiis aperiam placeat ad voluptatem earum, eos dignissimos tempore nihil fugit voluptatibus, commodi enim. Alias?</p>
        <section class="Contactme">Contact Me </section>
+       <p class="cmcontent"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi nesciunt quidem quibusdam consequatur repellat iste officiis aperiam placeat ad voluptatem earum, eos dignissimos tempore nihil fugit voluptatibus, commodi enim. Alias?</p>
+
     </main>
     <aside> 
     </aside>
