--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header>
         <nav>
             <ul class="nav-links">
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">My Work</a></li>
-                <li><a href="#">Contact Me</a></li>
+                <li><a href="#aboutme">About Me</a></li>
+                <li><a href="#mywork">My Work</a></li>
+                <li><a href="#contactme">Contact Me</a></li>
             </ul>
         </nav>
     </header>
@@ -20,9 +20,13 @@
     <main>
        <section class="aboutme">About me </section>
         <p class="amcontent"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi nesciunt quidem quibusdam consequatur repellat iste officiis aperiam placeat ad voluptatem earum, eos dignissimos tempore nihil fugit voluptatibus, commodi enim. Alias?</p>
-       <section class="mywork">My work </section>
-       <p class="mwcontent"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi nesciunt quidem quibusdam consequatur repellat iste officiis aperiam placeat ad voluptatem earum, eos dignissimos tempore nihil fugit voluptatibus, commodi enim. Alias?</p>
-       <section class="Contactme">Contact Me </section>
+       <div class="container">
+        <div class="box">  <a href="https://github.com/Gabrielasiu?tab=repositories"> </div>
+       <div class="box2">Git Repository</div>
+       </div>
+       <!--<section class="mywork">My work </section>
+       <p class="mwcontent"> hola </p> ESTO LO ESCONDI PORQUER QUIERO INTENTAR OTRA COSA--> 
+       <section class="contactme">Contact Me </section>
        <p class="cmcontent"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi nesciunt quidem quibusdam consequatur repellat iste officiis aperiam placeat ad voluptatem earum, eos dignissimos tempore nihil fugit voluptatibus, commodi enim. Alias?</p>
 
     </main>
