--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
        <div class="container">
         <div class="box">  <a href="https://github.com/Gabrielasiu?tab=repositories"></div>
        <div class="box2">Git Repository</div>
-       <div class="box3"> <a href="https://github.com/Gabrielasiu?tab=repositories"> Deployed Websites</div>
-         <div class="box4"> Minichallenge</div>
+       <div class="box3"> <a href="https://gabrielasiu.github.io/Challenge-1/"> Deployed Websites</div>
+         <div class="box4"> Mini challenge</div>
         </div>
      
        <!--<section class="mywork">My work </section>
