margin and padding box

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
        <div class="container">
         <div class="box">  <a href="https://github.com/Gabrielasiu?tab=repositories"></div>
        <div class="box2">Git Repository</div>
-       <div class="box3"> <a href="https://gabrielasiu.github.io/Challenge-1/"> Deployed Websites</div>
+       <div class="box3"> <a href="https://gabrielasiu.github.io/Challenge-1/"></a> Deployed Websites</div>
          <div class="box4"> Mini challenge</div>
         </div>
      
