about me content

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
       <section class="aboutme" id="aboutme">
         <h2>About Me</h2>
         <p class="amcontent">Full Stack Bootcamp student with advanced knowlegde 
-          of CSS and HTML. Experienced in responsive wed design and 
+          of CSS and HTML. Experienced in responsive wed design, pseudo-classes
+          and pseudo-elements on HTML elements.
+          <br>With basic knowlegde of:
+          <br> GitLab   
+          <br>GitHub
+          <br>JavaScript
         </p>
       
       </section>
@@ -36,7 +41,7 @@
           <div class="box2"> <a href="https://github.com/Gabrielasiu?tab=repositories" target="_blank"> Git Repository</a>
           </div>
           <div class="box3">
-            <a href="https://gabrielasiu.github.io/Challenge-1/" target="_blank"> Deployed Websites</a>
+            <a href="https://gabrielasiu.github.io/Challenge-1/" target="_blank"> My first App </a>
           </div>
           <div class="box4"> Mini challenge</div>
         <div class="box5"> 
