--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
         <h2>Work</h2>     
       
         <div class="container">
-          <div class="box2"> <a href="https://github.com/Gabrielasiu?tab=repositories" target="_blank"> Git Repository</a>
+          <div class="box2"> <a class="git" href="https://github.com/Gabrielasiu?tab=repositories" target="_blank"> Git Repository</a>
           </div>
           <div class="box3">
-            <a href="https://gabrielasiu.github.io/Challenge-1/" target="_blank"> My first App </a>
+            <a class="app" href="https://gabrielasiu.github.io/Challenge-1/" target="_blank"> My first App </a>
           </div>
-          <div class="box4"> Mini challenge</div>
+         <!--<div class="box4"> Mini challenge</div>--> 
         <div class="box5"> 
-          <a href="https://gabrielasiu.github.io/prework-study-guide/" target="_blank">Pre work</div>
+          <a class="pre" href="https://gabrielasiu.github.io/prework-study-guide/" target="_blank">Pre Work Study Guide</div>
           </div>
       </section>
        <section class="contactme" id="contactme">
