--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </section>
        <section class="contactme" id="contactme">
         <h2>Contact Me</h2>                                     
-       <p class="cmcontent"><button class="button1"><a href="https://twitter.com/gabysiiu" target="_blank"> Twitter</a></button> <button class="button2"><a href="https://www.linkedin.com/in/gabriela-siu-0545a9172/" target="_blank">LinkedIn</a></button></p>
+       <p class="cmcontent"><button class="button1"><a href="https://twitter.com/gabysiiu" target="_blank"> Twitter</a></button> <button class="button2"><a href="https://www.linkedin.com/in/gabriela-siu-0545a9172/" target="_blank">LinkedIn</a></button><button class="button3"><a href="mailto:gabysiiu@hotmail.com"> Email Me</a></p>
       
       </section>
        
