--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
   <link rel="stylesheet" href="style.css"/>
   <body>
-    <h2 class="title">My portafolio</h2><img src="shak.jpeg">
+    <h2 class="title">My portafolio</h2><img src="/img/shak.jpeg">
     <header>
         <nav>
             <ul class="nav-links">
