title attribute img

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
   <link rel="stylesheet" href="style.css"/>
   <body>
-    <h2 class="title">My portafolio</h2><img src="/img/shak.jpeg">
+    <h2 class="title">My portafolio</h2><img src="shak.jpeg" title="Profile image">
     <header>
         <nav>
             <ul class="nav-links">
@@ -38,13 +38,14 @@
         <h2>Work</h2>     
       
         <div class="container">
-          <div class="box2"> <a class="git" href="https://github.com/Gabrielasiu?tab=repositories" target="_blank"> Git Repository</a>
+          <div class="box2" title="GitHub logo">
+             <a class="git" href="https://github.com/Gabrielasiu?tab=repositories" target="_blank"> Git Repository</a>
           </div>
-          <div class="box3">
+          <div class="box3" title="My First App preview">
             <a class="app" href="https://gabrielasiu.github.io/Challenge-1/" target="_blank"> My first App </a>
           </div>
          <!--<div class="box4"> Mini challenge</div>--> 
-        <div class="box5"> 
+        <div class="box5" title="Pre Work Study Guide preview"> 
           <a class="pre" href="https://gabrielasiu.github.io/prework-study-guide/" target="_blank">Pre Work Study Guide</div>
           </div>
       </section>
