--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
   <link rel="stylesheet" href="style.css"/>
   <body>
-    <h2 class="title">My portafolio</h2><img src="shak.jpeg" title="Profile image">
+    <h2 class="title">My portafolio</h2><img src="shak.png" title="Profile image">
     <header>
         <nav>
             <ul class="nav-links">
@@ -58,4 +58,5 @@
     </main>
    
   </body> 
-
+<!--PREGUNTAR POR QUE NO SALE EL TITLE EN LAS IMAGENEES
+NI SE CAMBIA EL COLOR DEL TITULO EN MY WORK -->
