my project added into porfolio

--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
          <!--<div class="box4"> Mini challenge</div>--> 
         <div class="box5" title="Pre Work Study Guide preview"> 
           <a class="pre" href="https://gabrielasiu.github.io/prework-study-guide/" target="_blank">Pre Work Study Guide</div>
+            <div class="box6" title="Poject1"> 
+              <a class="project" href="https://yordanop.github.io/atoms-await-lizard/" target="_blank">My first project</div>
+              </div>
           </div>
+          
       </section>
        <section class="contactme" id="contactme">
         <h2>Contact Me</h2>                                     
